--- a/style.css
+++ b/style.css
@@ -43,6 +43,13 @@
     width: 25px;
     cursor: pointer;
   }
+  .hamburger img{
+    width: 50px;
+    cursor: pointer;
+  }
+  main{
+    padding: 20px;
+  }
   .first {
     max-width: 960px;
     margin: auto;
@@ -131,4 +138,36 @@
   .item a{
     text-decoration: none;
     color: white;
+  }
+  @media screen and (max-width: 1050px) {
+    .nav-list{
+      display: none;
+    }
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 17px;
+      margin: auto;
+    }
+    
+  }
+  @media screen and (max-width: 900px){
+    .grid{
+      grid-template-columns: 1fr 1fr;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  @media screen and (max-width: 450px) {
+    .grid{
+      grid-template-columns: 1fr;
+      justify-content: center;
+      align-items: center;
+    }    
+  }
+  @media screen and (min-width: 1050px){
+    .hamburger{
+      display: none;
+    }
   }
